--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Motor House OS v30</title>
+<meta name="theme-color" content="#020617">
 
 <!--
 Suggested Firestore security rules (apply in Firebase console, not here):
@@ -614,7 +615,7 @@ input:focus {
 <div id="print-area"></div>
 
 <!-- App logic -->
-<script src="motorhouse-os-v30.js"></script>
+<script src="motorhouse-os-v30.js" defer></script>
 
 <!-- Register service worker for PWA support -->
 <script>
